--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ body {
 }
 
 .aylana {
+  z-index: -10;
   position: relative;
   width: 300px;
   height: 300px;
@@ -82,7 +83,7 @@ body {
 
 /* type writter css */
 
-.typewriter h1 {
+.typewriter h1, .typewriter > a {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
