--- a/src/components/Homepage/Homepage.module.css
+++ b/src/components/Homepage/Homepage.module.css
@@ -1,3 +1,5 @@
+@tailwind utilities;
+
 
 .main{
     @apply  font-mono bg-white relative overflow-hidden;
@@ -31,10 +33,10 @@
     @apply animate-ping;
 }
 .blocButton{
-    @apply flex items-center justify-center mt-4 animate-spin;
+    @apply flex items-center justify-center mt-4 ;
 }
 .textButton{
-    @apply uppercase py-2 my-2 px-4 md:mt-16 bg-transparent  border-2 border-gray-800 text-red-800 hover:bg-gray-800 hover:text-white text-sm animate-spin rounded-xl;
+    @apply uppercase py-2 my-2 px-4 md:mt-16 bg-transparent  border-2 border-gray-800 text-red-800 hover:bg-gray-800 hover:text-white text-sm animate-pulse rounded-xl;
 }
 
 .bitmoji{
