--- a/src/components/Footer/index.module.css
+++ b/src/components/Footer/index.module.css
@@ -1,5 +1,5 @@
 .footer{
-    @apply flex flex-col  h-36 items-center justify-between px-6  bg-red-50  sm:flex-row;
+    @apply flex flex-col  h-64 xl:h-36 items-center justify-between px-7  bg-red-50  sm:flex-row sm:h-56 md:h-32;
 }
 
 .sentence_footer{
