fix modal , and code cleaner

--- a/src/components/Contact/index.module.css
+++ b/src/components/Contact/index.module.css
@@ -73,3 +73,11 @@
 .bitmoji{
     @apply rounded-full w-40 mx-auto;
 }
+
+.emojiBloc{
+    @apply w-auto h-5 flex justify-around animate-bounce;
+}
+
+.iconBloc{
+    @apply sm:inline-flex hidden;
+}
