--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -1,16 +1,16 @@
 .container{
-    @apply overflow-hidden hover:shadow-2xl  rounded-3xl h-96  w-60 md:w-80 cursor-pointer mr-10 my-10  hover:border-l-4 border-red-400 border-b-4 ;
+    @apply overflow-hidden hover:shadow-2xl rounded-3xl h-2/3  w-60 md:w-80 cursor-pointer mr-10 my-5  hover:border-l-4 border-red-400 border-b-4 ;
 }
 
 .imageCard{
-    @apply max-h-40 w-full object-cover;
+    @apply h-56 w-full object-cover;
 }
 .blocCard{
-    @apply bg-white dark:bg-gray-800 w-full p-4;
+    @apply bg-white dark:bg-gray-800 w-full p-4 flex flex-col items-center;
 }
 
 .textType{
-    @apply text-indigo-500   font-medium;
+    @apply text-red-600   font-medium;
 }
 
 .textTitle{
@@ -18,7 +18,7 @@
 }
 
 .textDescription{
-    @apply text-gray-400 dark:text-gray-300 font-light ;
+    @apply text-gray-600 font-light ;
 }
 
 .bloc2{
@@ -39,4 +39,8 @@
 
 .dateText{
     @apply text-gray-400 dark:text-gray-300;
+}
+
+.modalButton{
+    @apply px-6 py-1 w-32 my-3  text-red-600 hover:bg-red-200  font-bold rounded shadow hover:shadow-2xl outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-75;
 }
