--- a/src/components/Modal.js/Modal.module.css
+++ b/src/components/Modal.js/Modal.module.css
@@ -15,7 +15,7 @@
 }
 
 .titleModal{
-    @apply text-3xl font-semibold;
+    @apply  font-myFont text-3xl font-semibold;
 }
 
 .bodyBlocModal{
@@ -35,7 +35,7 @@
 }
 
 .buttonFooterModal{
-    @apply text-red-500  font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150;
+    @apply font-myFont text-red-500  font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150;
 }
 
 .blackScreenModal{
