--- a/src/components/Homepage/index.module.css
+++ b/src/components/Homepage/index.module.css
@@ -2,8 +2,9 @@
 
 
 .main{
-    @apply font-myFont bg-white relative overflow-hidden;
-    height: 80vh;
+    @apply font-myFont bg-white relative flex flex-col justify-center items-center ;
+    min-height: 80vh;
+    
 }
 .bloc{
     @apply hidden md:block absolute -bottom-28 -left-32 w-96 h-96;
