--- a/src/components/Homepage/index.module.css
+++ b/src/components/Homepage/index.module.css
@@ -2,7 +2,7 @@
 
 
 .main{
-    @apply font-myFont bg-white relative flex flex-col justify-center items-center ;
+    @apply  bg-white relative flex flex-col justify-center items-center ;
     min-height: 80vh;
     
 }
@@ -26,10 +26,15 @@
     @apply flex flex-col mt-5 overflow-y-hidden;
 }
 .sentence1{
-    @apply text-3xl my-6 text-center text-red-800;
+    @apply text-3xl my-6 text-center;
+    color: var(--orange );
+    font-family: var(--MainTypo);
 }
 .sentence2{
-    @apply max-w-3xl text-5xl md:text-6xl font-bold mx-auto  text-red-800 text-center py-2;
+    @apply max-w-3xl text-5xl md:text-6xl font-bold mx-auto text-center py-2;
+    font-family: var(--SecondTypo);
+    color: var(--orange);
+
 }
 .emoji{
     @apply animate-ping;
@@ -38,7 +43,9 @@
     @apply flex items-center justify-center mt-4 ;
 }
 .textButton{
-    @apply uppercase py-2 my-2 px-4 md:mt-16 bg-transparent  border-2 border-gray-800 text-red-800 hover:bg-gray-800 hover:text-white text-sm animate-pulse rounded-xl;
+    @apply uppercase py-2 my-2 px-4 md:mt-16 bg-transparent  hover:text-red-400 text-sm animate-pulse rounded-xl;
+    border: 2px solid var(--orange);
+    color: var(--violet)
 }
 
 .bitmoji{
