--- a/src/components/Footer/index.module.css
+++ b/src/components/Footer/index.module.css
@@ -1,17 +1,20 @@
 .footer{
-    @apply flex flex-col w-screen  h-44 xl:h-52 items-center justify-between px-7  bg-red-50  md:flex-row sm:h-36;
+    @apply flex flex-col w-screen  h-44 xl:h-52 items-center justify-between px-7  md:flex-row sm:h-36;
+    border-top: 2px solid var(--violet);
 }
 
 .sentence_footer{
-    @apply text-xl font-bold text-red-800  hover:text-red-500 ;
+    @apply text-xl font-bold;
+    color: var(--orange);
 }
 
 .legalMention{
-    @apply py-2 text-red-800 sm:py-0;
+    @apply py-2 sm:py-0;
+    color: var(--orange);
 }
 
 .item_footer{
-    @apply mx-2 text-gray-600  hover:text-gray-500 ;
+    @apply mx-2 ;
 }
 
 .footerBlocIcon{
