--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -32,11 +32,13 @@
 }
 
 .navHeaderBloc{
-    @apply  text-red-800 dark:text-white uppercase text-lg lg:flex lg:flex-row items-center hidden;
+    @apply  uppercase text-lg lg:flex lg:flex-row items-center hidden;
+    color: var(--orange);
 }
 
 .header2_header{
-    @apply h-24 sm:h-32 flex items-center z-40 w-full border-b-2 border-red-200 bg-white fixed top-0;
+    @apply h-24 sm:h-32 flex items-center z-40 w-full  bg-white fixed top-0;
+    border-bottom: 2px solid var(--violet)
 }
 
 .bloc2_header{
@@ -44,11 +46,13 @@
 }
 
 .openMenuButton{
-    @apply flex flex-col h-12 w-12 border-2 border-red-500 rounded justify-center items-center group lg:hidden z-50;
+    @apply flex flex-col h-12 w-12 rounded justify-center items-center group lg:hidden z-50;
+    border: 2px solid var(--orange)
 }
 
 .blocMail_header{
-    @apply uppercase text-red-800  font-black text-3xl flex items-center;
+    @apply uppercase  font-black text-3xl flex items-center;
+    color: var(--orange)
 }
 
 .mail_header{
@@ -56,15 +60,24 @@
 }
 
 .item_header{
-    @apply hover:text-red-800 hover:bg-gray-100 flex items-center p-2 my-6 transition-colors  duration-200  text-red-600  rounded-lg;
+    @apply  flex items-center p-2 my-6 transition-colors  duration-200  rounded-lg;
+    color: var(--orange );
+}
+
+.item_header:hover{
+    background-color: var(--violet)
 }
 
 .item_open_header{
-    @apply font-myFont py-2 px-6 flex hover:text-red-600 hover:bg-gray-100;
+    @apply  py-2 px-6 flex;
+}
+
+.item_open_header:hover{
+    background-color: var(--violet)
 }
 
 .item_li_header{
-    @apply font-myFont mx-4 text-5xl font-normal;
+    @apply  mx-4 text-5xl font-normal;
 }
 
 .fantome{
