--- a/src/components/Loader/index.module.css
+++ b/src/components/Loader/index.module.css
@@ -5,9 +5,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image:url("https://64.media.tumblr.com/d28f02c19e5545ec7f6088914e9e756d/1f9784b9aa1ae8ba-a5/s640x960/0f5675efe97282375ecd8fd596243505c8de7ebf.gifv");
+    background-image:url("https://s3.amazonaws.com/www-inside-design/uploads/2018/12/image1.gif");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: auto;
     filter:grayscale(20%);
     -webkit-filter:grayscale(20%);
 }
