--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -1,85 +1,83 @@
-.container_header{
-        @apply w-screen h-screen bg-gray-50 absolute z-40 lg:hidden;
-        animation: fadeIn 1s ease-in forwards;
-        -webkit-animation: fadeIn 1s ease-in forwards;
+.container_header {
+  @apply w-screen h-screen bg-gray-50 absolute z-40 lg:hidden;
+  animation: fadeIn 1s ease-in forwards;
+  -webkit-animation: fadeIn 1s ease-in forwards;
 }
 
-@keyframes fadeIn{
-    from {
-        opacity: 0;
-        transform: translate3d(400px,0,0);
-        -webkit-transform: translate3d(400px,0,0);
-        -moz-transform: translate3d(400px,0,0);
-        -ms-transform: translate3d(400px,0,0);
-        -o-transform: translate3d(400px,0,0);
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate3d(400px, 0, 0);
+    -webkit-transform: translate3d(400px, 0, 0);
+    -moz-transform: translate3d(400px, 0, 0);
+    -ms-transform: translate3d(400px, 0, 0);
+    -o-transform: translate3d(400px, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
-    to {
-        opacity:1;
- 
+.bloc1_header {
+  @apply h-screen flex flex-col sm:flex-row items-center justify-center sm:justify-around;
 }
+.header_header {
+  @apply w-72 h-screen;
 }
-
-
-.bloc1_header{
-    @apply  h-screen flex flex-col sm:flex-row items-center justify-center sm:justify-around;
-}
-.header_header{
-    @apply w-72 h-screen;
-}
-.nav_header{
-    @apply mt-10 px-6;
+.nav_header {
+  @apply mt-10 px-6;
 }
 
-.navHeaderBloc{
-    @apply  uppercase text-lg lg:flex lg:flex-row items-center hidden;
-    color: var(--orange);
+.navHeaderBloc {
+  @apply uppercase text-lg lg:flex lg:flex-row items-center hidden;
+  color: var(--orange);
 }
 
-.header2_header{
-    @apply h-24 sm:h-32 flex items-center z-40 w-full  bg-white fixed top-0;
-    border-bottom: 2px solid var(--violet)
+.header2_header {
+  @apply h-24 sm:h-32 flex items-center z-40 w-full  bg-white fixed top-0;
+  border-bottom: 2px solid var(--violet);
 }
 
-.bloc2_header{
-    @apply container mx-auto px-6 flex items-center justify-between;
+.bloc2_header {
+  @apply container mx-auto px-6 flex items-center justify-between;
 }
 
-.openMenuButton{
-    @apply flex flex-col h-12 w-12 rounded justify-center items-center group lg:hidden z-50;
-    border: 2px solid var(--orange)
+.openMenuButton {
+  @apply flex flex-col h-12 w-12 rounded justify-center items-center group lg:hidden z-50;
+  border: 2px solid var(--orange);
 }
 
-.blocMail_header{
-    @apply uppercase  font-black text-3xl flex items-center;
-    color: var(--orange)
+.blocMail_header {
+  @apply uppercase  font-black text-3xl flex items-center;
+  color: var(--orange);
 }
 
-.mail_header{
-    @apply  text-xs ml-3 mt-1;
+.mail_header {
+  @apply text-xs ml-3 mt-1;
 }
 
-.item_header{
-    @apply  flex items-center p-2 my-6 transition-colors  duration-200  rounded-lg;
-    color: var(--orange );
+.item_header {
+  @apply flex items-center p-2 my-6 transition-colors  duration-200  rounded-lg;
+  color: var(--orange);
 }
 
-.item_header:hover{
-    background-color: var(--violet)
+.item_header:hover {
+  background-color: var(--violet);
 }
 
-.item_open_header{
-    @apply  py-2 px-6 flex;
+.item_open_header {
+  @apply py-2 px-6 flex rounded-2xl transition-colors;
 }
 
-.item_open_header:hover{
-    background-color: var(--violet)
+.item_open_header:hover {
+  background-color: var(--violet);
 }
 
-.item_li_header{
-    @apply  mx-4 text-5xl font-normal;
+.item_li_header {
+  @apply mx-4 text-5xl font-normal;
 }
 
-.fantome{
-    @apply  h-24 sm:h-32;
+.fantome {
+  @apply h-24 sm:h-32;
 }
