--- a/src/components/Modal/index.module.css
+++ b/src/components/Modal/index.module.css
@@ -1,43 +1,46 @@
-.containerModal{
-    @apply justify-center items-center flex overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none;
+.containerModal {
+  @apply justify-center items-center flex overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none;
 }
 
-.blocModal{
-    @apply relative w-auto my-6 mx-auto max-w-3xl;
+.blocModal {
+  @apply relative w-auto my-6 mx-auto max-w-3xl;
 }
 
-.contentModal{
-    @apply border-0 rounded-lg shadow-lg relative flex flex-col w-full bg-white outline-none focus:outline-none;
+.contentModal {
+  @apply border-0 rounded-3xl shadow-lg relative flex flex-col w-full bg-white outline-none focus:outline-none;
 }
 
-.headerBlocModal{
-    @apply flex items-start justify-center text-red-600 p-5 border-b border-solid  rounded-t;
+.headerBlocModal {
+  @apply flex items-start justify-center p-5 border-b border-solid  rounded-t;
+  color: var(--orange);
 }
 
-.titleModal{
-    @apply   text-3xl font-semibold;
+.titleModal {
+  @apply text-3xl font-semibold;
 }
 
-.bodyBlocModal{
-    @apply relative p-6 flex-auto flex flex-col justify-center items-center;
+.bodyBlocModal {
+  @apply relative p-6 flex-auto flex flex-col justify-center items-center;
 }
 
-.descriptionModal{
-    @apply my-4 text-lg leading-relaxed;
+.descriptionModal {
+  @apply my-4 text-lg leading-relaxed;
 }
 
-.buttonModal{
-    @apply bg-red-600 hover:bg-red-800 text-white font-bold py-2 px-4 rounded animate-pulse;
+.buttonModal {
+  @apply text-white font-bold py-2 px-4 rounded animate-pulse;
+  background-color: var(--orange);
 }
 
-.footerModal{
-    @apply flex items-center justify-center p-6 border-t border-solid rounded-b;
+.footerModal {
+  @apply flex items-center justify-center p-6 border-t border-solid rounded-b;
 }
 
-.buttonFooterModal{
-    @apply  text-red-500  font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150;
+.buttonFooterModal {
+  @apply font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150;
+  color: var(--orange);
 }
 
-.blackScreenModal{
-    @apply opacity-70 fixed inset-0 z-40 bg-black;
+.blackScreenModal {
+  @apply opacity-70 fixed inset-0 z-40 bg-black;
 }
