add firestore db, and connexion

--- a/src/components/Portfolio/index.module.css
+++ b/src/components/Portfolio/index.module.css
@@ -34,3 +34,7 @@
 .sectionContainer {
     @apply flex  justify-around items-center w-screen;
 }
+
+.title {
+    @apply text-2xl text-gray-800 tracking-wider mb-5 font-bold text-center;
+}
